kube/alpine.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine  
spec:
  containers:
  - image: jburks725/alpine-dns-test:0.0.3
    command:
      - /bin/sh
      - "-c"
      - "sleep 60m"
    imagePullPolicy: IfNotPresent
    name: alpine
  restartPolicy: Always
