kube/dashboard-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: dashboard
  name: dashboard
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: dashboard
    spec:
      containers:
      - env:
        - name: RESGATE_HOST
          value: http://resgate:8080        
        name: dashboard
        image: decscloud/dashboard
        ports:
        - containerPort: 9090
        resources: {}
      restartPolicy: Always
status: {}
