kube/gameloop-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: gameloop
  name: gameloop
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gameloop
    spec:
      containers:
      - env:
        - name: TIMER_INTERVAL_FPS
          value: "10"
        - name: PORT
          value: "9000"
        - name: RUST_LOG
          value: warn
        - name: NATS_URL
          value: nats://nats:4222
        - name: REDIS_URL
          value: redis://redis:6379
        image: decscloud/game_loop
        name: gameloop
        ports:
        - containerPort: 9000
        resources: {}
      restartPolicy: Always
status: {}
