kube/merchant-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: merchant
    game: stacktrader
  name: merchant
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: merchant
        game: stacktrader
    spec:
      containers:
        - env:
            - name: PORT
              value: "9000"
            - name: RUST_LOG
              value: warn
            - name: NATS_URL
              value: nats://nats:4222
            - name: REDIS_URL
              value: redis://redis:6379
            - name: NATS_SUBSCRIPTION
              value: decs.frames.*.merchant,decs.system.registry
          image: stacktrader/merchant
          name: merchant
          ports:
            - containerPort: 9000
          resources: {}
      restartPolicy: Always
status: {}
