kube/nav-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nav
    game: stacktrader
  name: nav
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nav
        game: stacktrader
    spec:
      containers:
      - env:
        - name: PORT
          value: "9000"
        - name: RUST_LOG
          value: warn,cranelift_wasm=warn
        - name: NATS_URL
          value: nats://nats:4222
        - name: REDIS_URL
          value: redis://redis:6379
        - name: NATS_SUBSCRIPTION
          value: decs.frames.*.navigation, decs.system.registry
        image: stacktrader/navigation
        name: nav
        ports:
        - containerPort: 9000
        resources: {}
      restartPolicy: Always
status: {}
