kube/physics-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: physics
    game: stacktrader
  name: physics
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: physics
        game: stacktrader
    spec:
      containers:
      - env:
        - name: PORT
          value: "9000"
        - name: RUST_LOG
          value: warn
        - name: NATS_URL
          value: nats://nats:4222
        - name: REDIS_URL
          value: redis://redis:6379
        - name: NATS_SUBSCRIPTION
          value: decs.frames.*.physics,decs.system.registry
        image: stacktrader/physics
        name: physics
        ports:
        - containerPort: 9000
        resources: {}
      restartPolicy: Always
status: {}
