kube/radar-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: radar
    game: stacktrader
  name: radar
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: radar
        game: stacktrader
    spec:
      containers:
      - env:
        - name: PORT
          value: "9000"
        - name: RUST_LOG
          value: warn
        - name: NATS_URL
          value: nats://nats:4222
        - name: REDIS_URL
          value: redis://redis:6379
        - name: NATS_SUBSCRIPTION
          value: decs.frames.*.radar,event.decs.components.*.*.position.change, decs.system.registry
        image: stacktrader/radar
        name: radar
        ports:
        - containerPort: 9000
        resources: {}
      restartPolicy: Always
status: {}
