kube/system-mgr-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: system-mgr
  name: system-mgr
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: system-mgr
    spec:
      containers:
      - env:
        - name: PORT
          value: "9000"
        - name: TIMER_INTERVAL_FPS
          value: "1"
        - name: RUST_LOG
          value: warn,cranelift_wasm=warn
        - name: NATS_URL
          value: nats://nats:4222
        - name: REDIS_URL
          value: redis://redis:6379
        - name: NATS_SUBSCRIPTION
          value: get.decs.system.*,get.decs.systems,access.decs.system.*,access.decs.systems,decs.system.registry.replies,decs.*.gameloop
        image: decscloud/system_mgr
        name: system-mgr
        ports:
        - containerPort: 9000
        resources: {}
      restartPolicy: Always
status: {}
