kube/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: dashboard
  name: dashboard
spec:
  ports:
  - name: "9090"
    port: 9090
    targetPort: 9090
  selector:
    app: dashboard
status:
  loadBalancer: {}
