kube/gameloop-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: gameloop
  name: gameloop
spec:
  ports:
  - name: "9000"
    port: 9000
    targetPort: 9000
  selector:
    app: gameloop
status:
  loadBalancer: {}
