kube/gameui-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: gameui
  name: gameui
spec:
  ports:
  - name: "9090"
    port: 9090
    targetPort: 9090
  selector:
    app: gameui
status:
  loadBalancer: {}
