kube/leaderboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: leaderboard
  name: leaderboard
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    app: leaderboard
status:
  loadBalancer: {}
