kube/merchant-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: merchant
  name: merchant
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    app: merchant
status:
  loadBalancer: {}
