kube/mining-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mining
  name: mining
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    app: mining
status:
  loadBalancer: {}
