kube/nav-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nav
  name: nav
spec:
  ports:
  - name: "9000"
    port: 9000
    targetPort: 9000
  selector:
    app: nav
status:
  loadBalancer: {}
