kube/nodeport-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ui
  name: ui
spec:
  ports:
  - name: http
    nodePort: 30001
    port: 9090
    protocol: TCP
    targetPort: 9090
  type: NodePort
status:
  loadBalancer: {}
