kube/physics-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: physics
  name: physics
spec:
  ports:
  - name: "9000"
    port: 9000
    targetPort: 9000
  selector:
    app: physics
status:
  loadBalancer: {}
