kube/radar-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: radar
  name: radar
spec:
  ports:
  - name: "9000"
    port: 9000
    targetPort: 9000
  selector:
    app: radar
status:
  loadBalancer: {}
