kube/system-mgr-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: system-mgr
  name: system-mgr
spec:
  ports:
  - name: "9000"
    port: 9000
    targetPort: 9000
  selector:
    app: system-mgr
status:
  loadBalancer: {}
