kube/user-mgr-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: user-mgr
  name: user-mgr
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    app: user-mgr
status:
  loadBalancer: {}
